--- a/public/css/components/header.css
+++ b/public/css/components/header.css
@@ -24,7 +24,7 @@
     top: 1rem;
     z-index: 90;
     height: 80px;
-    width: calc(100% - 4rem);
+    width: auto;
     margin: 1rem 2rem;
     border-radius: 24px;
     box-shadow: var(--shadow-sm);
