--- a/public/css/components/sidebar.css
+++ b/public/css/components/sidebar.css
@@ -48,6 +48,15 @@
     box-shadow: 0 4px 6px -1px rgba(220, 38, 38, 0.3);
 }
 
+.sidebar-logo {
+    width: 32px;
+    height: 32px;
+    object-fit: contain;
+    object-position: center;
+    border-radius: 4px;
+    display: block;
+}
+
 .logo-img {
     width: 32px;
     height: 32px;
